test/testFunc/func8.out
func8.rask:8:11: error: unknown identifier 'local'

