test/testFunc/func8.rask
f() -> void
{
    var local = 1;
}

main() -> void
{
    print(local);
}
